# network_security

./: .dockerignore  docker-compose.override.yml  main.py  push_data.py  pyproject.toml  requirements.txt  setup.py
.astro/: config.yaml
dags/: network_security_pipeline.py
mlflow/: dockerfile
mlruns/669008373127704797/: meta.yaml
mlruns/669008373127704797/085f60fbdadd4e789934824e982184a0/: meta.yaml
mlruns/669008373127704797/085f60fbdadd4e789934824e982184a0/metrics/: f1_score  precision  recall_score
mlruns/669008373127704797/085f60fbdadd4e789934824e982184a0/tags/: mlflow.runName
mlruns/669008373127704797/e210acd741a54f1faa5624df237606c0/: meta.yaml
mlruns/669008373127704797/e210acd741a54f1faa5624df237606c0/metrics/: f1_score  precision  recall_score
mlruns/669008373127704797/e210acd741a54f1faa5624df237606c0/tags/: mlflow.runName
mlruns/669008373127704797/models/m-0317259925844bc495d4f494a2590ae4/: meta.yaml
mlruns/669008373127704797/models/m-0317259925844bc495d4f494a2590ae4/artifacts/: MLmodel  (+2 more)
mlruns/669008373127704797/models/m-acee118a18464acf9253a16f26e1d253/: meta.yaml
network_security/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
network_security/constants/training_pipeline/: __init__.py
network_security/entity/: config_entity.py
network_security/exception/: exception.py
network_security/pipeline/: training_pipeline.py
network_security/utils/main_utils/: utils.py
network_security/utils/ml_utils/metric/: classification_metric.py
network_security/utils/ml_utils/model/: estimator.py
(+11 files in other folders)
